# VirtualFlightRadar-Backend

./: .bettercodehub.yml  .clang-format  .clang-tidy  .cproject  .dockerignore  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES  README.md  bootstrap.sh  healthcheck.sh  install.sh  link.md  pipeline.yml  properties.conf  run.sh  test.ini  version.txt  vfrb.ini  vfrb.ini.in  vfrb.properties  vfrb.service.in
.github/: CODEOWNERS  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.ide/: .cproject  README.md
.ide/eclipse/: .project  CODESTYLE.xml
.ide/qtcreator/: VirtualFlightRadar-Backend.creator.shared  VirtualFlightRadar-Backend.files  VirtualFlightRadar-Backend.includes
Debug/: Flugleitertool  makefile
Debug/sources/: subdir.mk
Debug/src/: ADSBin.d  Aircraft.d  Main.d  subdir.mk
doc/: configuration.md  howtorun.md  installation.md
docker/: Dockerfile
docs/: .gitignore  AUTHORS.md  CHANGELOG.md  CODE-OF-CONDUCT.html  CODE-OF-CONDUCT.md  CONTRIBUTING.md  README.md  _config.yml  about.html  configuration.md  get-started.html  home.html  index.html  index.md  install.html  installation.html  installation.md  issue_template.md  operation.md  pull_request_template.md  reports.html  setup.html  tests.html
docs/_includes/: README.md  pages_list
docs/_layouts/: default.html
docs/coverage/: index-sort-f.html  index-sort-l.html  index.html
docs/css/: colors.css  default.css  syntax.css
include/: CHashQueue.hpp  CLogger.hpp  CProgramOptions.hpp  CStaticString.hpp  CVfrb.hpp  Logger.hpp  String.hpp  Types.hpp  VFRB.h  parameters.h  types.h  types.hpp
include/client/: AprscClient.h  CAprscClient.hpp  CClientFactory.hpp  CClientManager.hpp  CFlarmClient.hpp  CGpsdClient.hpp  CSbsClient.hpp  CSensorClient.hpp  CTimeoutBackoff.hpp  Client.h  ClientFactory.h  ClientManager.h  Connector.hpp  ConnectorImplBoost.h  FlarmClient.h  GpsdClient.h  IClient.hpp  SbsClient.h  SensorClient.h  TimeoutBackoff.h
include/concurrency/: ConcurrentContainer.hpp  GuardedThread.hpp  SignalListener.h  ThreadGroup.hpp  WorkerThread.hpp
include/concurrent/: CGuardedThread.hpp  CObjectContainer.hpp  CSignalListener.hpp  CThreadGroup.hpp  CWorkerThread.hpp  ConcurrentContainer.hpp  ConcurrentNMEAContainer.hpp  GuardedThread.hpp  Mutex.h  Mutex.hpp  ObjectContainer.hpp  SignalListener.h  ThreadGroup.hpp  WorkerThread.hpp
include/config/: CConfigReader.hpp  CConfiguration.hpp  CProperties.hpp  ConfigReader.h  Configuration.h  Properties.h
include/data/: AircraftData.h  AtmosphereData.h  CAircraftData.hpp  CAtmosphereData.hpp  CGpsData.hpp  CWindData.hpp  Data.hpp  GpsData.h  IData.hpp  WindData.h
include/error/: Error.hpp  Exception.hpp  IError.hpp
include/exception/: Exception.hpp
include/feed/: AprscFeed.h  AtmosphereFeed.h  CAprscFeed.hpp  CAtmosphereFeed.hpp  CFeedFactory.hpp  CFlarmFeed.hpp  CGpsFeed.hpp  CSbsFeed.hpp  CWindFeed.hpp  Feed.h  FeedFactory.h  FlarmFeed.h  GpsFeed.h  IFeed.hpp  SbsFeed.h  WindFeed.h
include/math/: Constants.hpp  Math.hpp  constants.h  constants.hpp  math.hpp
include/object/: Aircraft.h  Atmosphere.h  CAircraft.hpp  CAtmosphere.hpp  CGpsPosition.hpp  CObject.hpp  CTimestamp.hpp  CWind.hpp  DateTimeImplBoost.h  GpsPosition.h  Object.h  TimeStamp.hpp  Timestamp.h  Timestamp.hpp  Wind.h
include/server/: CConnection.hpp  CServer.hpp  Connection.hpp  NetworkInterface.hpp  NetworkInterfaceImplBoost.h  Server.hpp  SocketException.h  SocketImplBoost.h  TcpInterface.hpp  TcpInterfaceImplBoost.h
include/util/: Bounds.hpp  CHashQueue.hpp  CString.hpp  ClassUtils.hpp  ConcurrentContainer.hpp  Logger.hpp  SignalListener.h  StringUtils.hpp  Utility.hpp  WorkerThread.h  WorkerThread.hpp  bounds.hpp  class_utils.h  class_utils.hpp  defines.h  math.hpp  string_utils.hpp  types.h  utility.hpp
profiling/: main.cpp  profiler.hpp  timestamp.cpp
service/: vfrb.service
service/vfrb.service.d/: vfrb.conf
src/: ADSBParser.cpp  ADSBParser.h  ADSBin.cpp  ADSBin.h  ADSBparser.cpp  ADSBparser.h  Aircraft.cpp  Aircraft.h  AircraftContainer.cpp  AircraftContainer.h  AircraftProcessor.cpp  AircraftProcessor.h  CLogger.cpp  CProgramOptions.cpp  CVfrb.cpp  ConfigReader.cpp  ConfigReader.h  Configuration.cpp  Configuration.h  ConnectIn.cpp  ConnectIn.h  ConnectInADSB.cpp  ConnectInADSB.h  ConnectInAPRSC.cpp  ConnectInAPRSC.h  ConnectInExt.cpp  ConnectInExt.h  ConnectInOGN.cpp  ConnectInOGN.h  ConnectOutNMEA.cpp  ConnectOutNMEA.h  Connection.cpp  Connection.h  ConnectionException.cpp  ConnectionException.h  Connector.cpp  Connector.h  ConnectorADSB.cpp  ConnectorADSB.h  Defines.h  (+42 more)
src/aircraft/: Aircraft.cpp  Aircraft.h  Aircraft.hpp  AircraftContainer.cpp  AircraftContainer.h  AircraftProcessor.cpp  AircraftProcessor.h
src/base/: Configuration.cpp  VFRB.cpp  VFRB.h  WeatherFeed.cpp  WeatherFeed.h
src/client/: AprscClient.cpp  AprscClient.h  AprscClient.hpp  CAprscClient.cpp  CClient.cpp  CClientFactory.cpp  CClientManager.cpp  CGpsdClient.cpp  CSbsClient.cpp  CSensorClient.cpp  CTimeoutBackoff.cpp  Client.cpp  Client.h  Client.hpp  ClientFactory.cpp  ClientFactory.h  ClientManager.cpp  ClientManager.h  ClientManager.hpp  Connector.hpp  ConnectorImplBoost.cpp  ConnectorImplBoost.h  Endpoint.hpp  FlarmClient.cpp  GpsdClient.cpp  GpsdClient.h  GpsdClient.hpp  IClient.cpp  SbsClient.cpp  SbsClient.h  SbsClient.hpp  (+4 more)
test/: .gitignore  AcceptorImplTest.cpp  Assertion.hpp  CAcceptorImplTest.cpp  CSocketImplTest.cpp  DateTimeImplTest.cpp  DateTimeImplTest.h  Helper.hpp  NetworkInterfaceImplTest.cpp  NetworkInterfaceImplTest.h  README.md  SocketImplTest.cpp  SocketImplTest.h  TcpInterfaceImplTest.cpp  TcpInterfaceImplTest.h  TestCString.cpp  TestClient.cpp  TestConfig.cpp  TestData.cpp  TestDataProcessor.cpp  TestFeed.cpp  TestFeedParser.cpp  TestGeneric.cpp  TestMath.cpp  TestObject.cpp  TestServer.cpp  TestString.cpp  TestSuite.ods  TestUtil.cpp  UnitTests.cpp  helper.hpp  regression.sh  server.lua  test.ini
(+672 files in other folders)
